update description - remove it for now

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jux-scroller",
   "version": "1.0.0",
-  "description": "A minimal but super functional scroller for most intents and purposes.",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
