--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docs": "jsdoc2md -t .readme.hbs -p list *.js > README.md"
+    "docs": "jsdoc2md -t .readme.hbs -p list *.js > README.md",
+    "example": "beefy example"
   },
   "author": "Jamie Owen <hello@jamieowen.com> (=)",
   "repository": "https://github.com/jamieowen/jux-scroller",
