--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "beefy": "^2.1.5",
-    "pixi.js": "^3.0.8"
+    "pixi.js": "^3.0.8",
+    "tape": "^4.2.2"
   }
 }
